--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Behold Your God — Viewer</title>
+  <title>Viewer</title>
 
   <!-- ---------- minimal fallback palette (overridden by themes.json) ---------- -->
   <style>
